--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+a{
+    text-decoration: none;
+}
+
 /* --------------------------headersection------------------------------- */
 
 .head_cont{
@@ -90,6 +94,15 @@
 
 .container{
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 88vh;
+    position: relative;
+}
+.container_main{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 88vh;
@@ -101,17 +114,12 @@
     flex-direction: column;
 }
 
-.text_small p:nth-child(1){
-    font-weight: 500;
-    font-size: 30px;
-    margin-bottom: 5px;
-}
 
 .text_small{
     display: none;
 }
 
-.text, .text_small{
+.text{
     text-align: center;
 }
 .text p:nth-child(1){
@@ -179,7 +187,7 @@
 }
 .new_chat{
     position: absolute;
-    bottom: 10px;
+    bottom: 5px;
     right: 20px;
     display: none;
 }
@@ -187,9 +195,9 @@
 .new_chat button{
     border: none;
     outline: none;
-    padding: 10px 20px;
-    background-color: #a9cef2;
-    border-radius: 20px;
+    padding: 15px 15px;
+    background-color: rgb(241, 215, 241);
+    border-radius: 10px;
     cursor: pointer;
 }
 
@@ -200,7 +208,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #EAF1FB;
+    background-color: rgb(240, 225, 240);
     padding: 17px 0;
 }
 .footer{
@@ -239,8 +247,223 @@
     font-size: 10px;
 }
 
+.name{
+    background-color: #C2E7FF;
+    padding: 8px 10px;
+    display: block;
+    margin-top: 8px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.name span:nth-child(1){
+    padding: 5px 8px;
+    background-color: #D9F0F5;
+    border-radius: 5px;
+    color: #38D4F3;
+    margin: 0 10px;
+}
+
+.name span:nth-child(2){
+    color: black;
+}
+
+/* ----------------------------------space------------------------------------- */
+
+.space_img{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.space_img img{
+    width: 250px;
+}
+
+.space_img > span{
+    font-size: small;
+    margin: 15px 0;
+    color: gray;
+}
+
+.space_btn button{
+    border: 0.5px solid rgb(190, 185, 185);
+    border-radius: 5px;
+    margin: 0 5px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 15px;
+    background-color: transparent;
+    padding: 10px 15px;
+    color: #589af1;
+}
+
+.space_btn button:hover{
+    background-color: #edf2fa;
+}
+
+.space_section{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.space_section > p{
+    font-size: 13px;
+    margin-left: 4px;
+}
+
+.space_section > span{
+    font-size: 13px;
+    color: gray;
+    margin: 5px 0;
+}
+.space_search{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0;
+}
+.s_search{
+    border: 1px solid gray;
+    width: 800px;
+    padding: 3px 10px;
+    border-radius: 25px;
+    margin: 0 8px;
+}
+
+.s_search input{
+    width: 75%;
+    padding: 10px 8px;
+    font-size: 16px;
+    outline: none;
+    border: none;
+}
+
+.s_search > i{
+    margin: 0 5px;
+}
+
+i{
+    cursor: pointer;
+}
+.text_small{
+    margin-top: 8px;
+    display: none;
+    justify-content: space-between !important;
+}
+.text_small > span{
+    margin: 0 8px;
+    color: gray;
+    font-size: 14px;
+}
+#small_a{
+    margin: 0 8px;
+    padding: 5px 8px;
+    color: green;
+    background-color: rgb(188, 239, 188);
+    border-radius: 4px;
+}
+.heading_space{
+    margin: 10px 8px;
+    font-size: 13px;
+    display: none;
+}
+.icon2{
+    display: none !important;
+}
+.small_chat{
+    /* display: none; */
+    background-color: #e6f4f7;
+}
+.name_a{
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.name_a span:nth-child(2){
+    font-size: 10px;
+    color: gray;
+}
+.small_chat_last i{
+    margin: 0 10px;
+}
+.small_chat_first a{
+    margin-right: 10px;
+}
+.small_chat_first > span{
+    padding: 5px 10px;
+    background-color: rgb(188, 239, 188);
+    color: green;
+    font-size: 18px;
+    margin-right: 4px;
+    border-radius: 4px;
+}
+.small_chat_first{
+    display: flex;
+    align-items: center;
+}
+.upper{
+    display: block;
+    width: 100%;
+}
+.double{
+    display: none;
+}
+.big_chat{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+}
+.big_chat_first > span{
+    font-size: 20px;
+    padding: 5px 10px;
+    border-radius: 8px;
+    margin: 0 10px;
+    background-color: #D9F0F5;
+    color: #3AD6F5;
+}
+.big_chat_first{
+    display: flex;
+    align-items: center;
+}
+.big_name_a{
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.big_name_a span:nth-child(1){
+    font-size: 25px;
+}
+.big_name_a span:nth-child(2){
+    font-size: 13px;
+    color: gray;
+}
+.upper > span{
+    margin: 0 30px;
+}
+#blue{
+    color: #0B57D0;
+    border-bottom: 4px solid #0B57D0;
+}
+.big_chat_last i{
+    margin: 0 10px;
+    font-size: 18px;
+}
 /* ---------------------Mediaqueries------------------------ */
 
+@media only screen and (max-width : 930px){
+    .s_search{
+        width: 600px;
+    }
+    .s_search input{
+        width: 65%;
+    }
+}
 @media only screen and (max-width : 900px){
     .search{
         background-color: #EAF1FB;
@@ -302,7 +525,45 @@
         font-size: 30px;
     }
 }
+@media only screen and (max-width : 730px){
+    .s_search{
+        width: 400px;
+    }
+    .s_search input{
+        width: 50%;
+    }
+}
 @media only screen and (max-width : 510px){
+    .double{
+        display: block;
+    }
+    .small_nav{
+        display: none;
+    }
+    .small_chat{
+        display: flex;
+        padding: 15px 20px;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .icon2{
+        display: block !important;
+        margin-right:8px !important;
+    }
+    .space_search{
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+    .s_search{
+        width: 300px;
+    }
+    .s_search input{
+        width: 70%;
+    }
+    .icon1{
+        display: none !important;
+    }
     .nav_start span{
         display: none;
     }
@@ -330,6 +591,11 @@
     }
     .container{
         height: 80vh;
+        display: block;
+    }
+    .container_main{
+        height: 80vh;
+        display: block;
     }
     .footer{
         display: block;
@@ -346,6 +612,35 @@
     .chat_small{
         display: block;
         margin: 10px 15px;
+    }
+    .heading_space{
+        display: block;
+    }
+    .text_small{
+        display: flex;
+    }
+    .upper{
+        display: none;
+    }
+    .space_btn{
+        display: flex;
+        flex-direction: column;
+    }
+    .space_btn button{
+        margin: 6px 0;
+        padding: 8px 15px;
+        border-radius: 20px;
+    }
+    .space_img img{
+        width: 200px;
+    }
+}
+@media only screen and (max-width : 415px){
+    .s_search{
+        width: 200px;
+    }
+    .s_search input{
+        width: 50%;
     }
 }
 @media only screen and (max-width : 380px){
