--- a/style.css
+++ b/style.css
@@ -199,9 +199,10 @@ a{
 }
 .new_chat{
     position: absolute;
-    bottom: 35px;
+    bottom: 25px;
     right: 20px;
     display: none;
+    z-index: -1;
 }
 
 .sidebar{
