--- a/style.css
+++ b/style.css
@@ -255,10 +255,7 @@ a{
     justify-content: space-between;
     background-color: #EAF1FB;
     position: absolute;
-    left: 0;
-    top: 0;
     transform: translateX(-100%);
-    transition: transform 0.5s;
 }
 
 .chat{
@@ -591,6 +588,9 @@ i{
     }
 }
 @media only screen and (max-width : 510px){
+    .main{
+        position: relative;
+    }
     .search img{
         display: block;
     }
@@ -687,6 +687,11 @@ i{
     }
     .hamburger{
         justify-content: flex-start;
+        transition: transform 0.5s;
+        z-index: 2;
+        position: absolute !important;
+        left: 0;
+        top: 0;
     }
     .chat{
         display: none;
